# choirsupport

./: .gitignore  README.md  convert_to_mp3.py  copy_midi.py  export_choir.py  pyproject.toml
choirsupport/: common.py  convert_to_mp3.py  copy_midi.py  create_choir_parts.py  example-config.yml  instruments.py
